<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerPageVM" type="com.app.app.modules.registerpage.data.viewmodel.RegisterPageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegisterPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackwaveeleven"
            android:layout_height="@dimen/_168pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageWaveEleven"
                android:layout_gravity="start"
                android:layout_height="@dimen/_168pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_wave11}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_wave11"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignup"
                android:layout_gravity="top|end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_42pxv"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_31pxh"
                android:layout_marginTop="@dimen/_42pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerPageVM.registerPageModel.txtSignup}"
                style="@style/txtPoppinsmedium24_1" tools:text="@string/lbl_sign_up"/>
        </FrameLayout>
        <EditText
            android:background="@drawable/rectangle_bg_teal_600_7f_radius_15"
            android:drawableStart="@drawable/drawable_img_user"
            android:ellipsize="end" android:hint="@string/lbl_username"
            android:id="@+id/etUsername" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_61pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_22pxv" android:singleLine="true"
            android:text="@={registerPageVM.registerPageModel.etUsernameValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_teal_600_7f_radius_15"
            android:drawablePadding="@dimen/_16pxh"
            android:drawableStart="@drawable/img_vector"
            android:ellipsize="end"
            android:hint="@string/lbl_phone_number"
            android:id="@+id/etEmail" android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_23pxh"
            android:paddingTop="@dimen/_22pxv" android:singleLine="true"
            android:text="@={registerPageVM.registerPageModel.etEmailValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_teal_600_7f_radius_15"
            android:drawablePadding="@dimen/_16pxh"
            android:drawableStart="@drawable/img_vector"
            android:ellipsize="end"
            android:hint="@string/msg_user_phone_numb"
            android:id="@+id/etEmailOne" android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_22pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_23pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@={registerPageVM.registerPageModel.etEmailOneValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_teal_600_7f_radius_15"
            android:drawableStart="@drawable/drawable_img_bxkey"
            android:ellipsize="end" android:hint="@string/lbl_passwotd"
            android:id="@+id/etPassword" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_22pxv" android:singleLine="true"
            android:text="@={registerPageVM.registerPageModel.etPasswordValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_teal_600_7f_radius_15"
            android:drawableStart="@drawable/drawable_img_bxkey"
            android:ellipsize="end"
            android:hint="@string/msg_confirm_passwot"
            android:id="@+id/etConfirmPasswor" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_23pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_23pxv" android:singleLine="true"
            android:text="@={registerPageVM.registerPageModel.etConfirmPassworValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegister"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_register"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_register"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtAlreadyhanean"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerPageVM.registerPageModel.txtAlreadyhanean}"
            style="@style/txtPoppinsmedium12" tools:text="@string/msg_already_hane_an"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSignin"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{registerPageVM.registerPageModel.txtSignin}"
            style="@style/txtPoppinsmedium14" tools:text="@string/lbl_sign_in"/>
    </LinearLayout>
</layout>
