<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="user2ScreenVM" type="com.app.app.modules.user2screen.data.viewmodel.User2ScreenVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearUser2screen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <ImageView android:gravity="start" android:id="@+id/imageVector"
            android:layout_height="@dimen/_159pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_vector_teal_600}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_teal_600"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnCallSomeone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_28pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_call_someone"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_call_someone"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRequestTime"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_28pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_request_time"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_request_time"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnReadingThings"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_28pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_reading_things"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_reading_things"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNotice"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_28pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_notice"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_notice"/>
        <EditText
            android:background="@drawable/rectangle_bg_teal_600_radius_30"
            android:ellipsize="end" android:hint="@string/lbl_back"
            android:id="@+id/etBtnBack" android:inputType="text"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_28pxh"
            android:layout_marginStart="@dimen/_28pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_11pxh"
            android:paddingStart="@dimen/_24pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={user2ScreenVM.user2ScreenModel.etBtnBackValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
    </LinearLayout>
</layout>
