<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginPageVM" type="com.app.app.modules.loginpage.data.viewmodel.LoginPageVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearLoginPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageScreenshot2023"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_235pxh"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_71pxv"
            android:layout_width="@dimen/_215pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_40pxh}"
            imageRes="@{@drawable/img_screenshot2023}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_screenshot2023"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginPageVM.loginPageModel.txtLogin}"
            style="@style/txtPoppinsmedium24" tools:text="@string/lbl_login"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPleaseFillthe"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginPageVM.loginPageModel.txtPleaseFillthe}"
            style="@style/txtPoppinsmedium12" tools:text="@string/msg_please_fill_the"/>
        <EditText
            android:background="@drawable/rectangle_bg_teal_600_7f_radius_15"
            android:drawableStart="@drawable/drawable_img_user"
            android:ellipsize="end" android:hint="@string/lbl_username"
            android:id="@+id/etUsername" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_22pxv" android:singleLine="true"
            android:text="@={loginPageVM.loginPageModel.etUsernameValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_teal_600_7f_radius_15"
            android:drawableStart="@drawable/drawable_img_bxkey"
            android:ellipsize="end" android:hint="@string/lbl_passwotd"
            android:id="@+id/etPassword" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_22pxv" android:singleLine="true"
            android:text="@={loginPageVM.loginPageModel.etPasswordValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded_1" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLoginOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_login"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtConfirmation"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_104pxh"
            android:layout_marginStart="@dimen/_104pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginPageVM.loginPageModel.txtConfirmation}"
            style="@style/txtPoppinsmedium12" tools:text="@string/msg_don_t_have_an_a"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSignup"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginPageVM.loginPageModel.txtSignup}"
            style="@style/txtPoppinsmedium14" tools:text="@string/lbl_sign_up"/>
        <ImageView android:id="@+id/imageVector"
            android:layout_height="@dimen/_134pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_vector_teal_600_134x390}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_teal_600_134x390"/>
    </LinearLayout>
</layout>
