<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="callingScreenVM" type="com.app.app.modules.callingscreen.data.viewmodel.CallingScreenVM"/>
    </data>
    <LinearLayout android:id="@+id/linearCallingScreen"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageScreenshot2023"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_264pxh"
            android:layout_marginEnd="@dimen/_52pxh"
            android:layout_marginStart="@dimen/_52pxh"
            android:layout_marginTop="@dimen/_70pxv"
            android:layout_width="@dimen/_254pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_40pxh}"
            imageRes="@{@drawable/img_screenshot2023}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_screenshot2023"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtBlindPersonPh"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_47pxh"
            android:layout_marginStart="@dimen/_52pxh"
            android:layout_marginTop="@dimen/_59pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{callingScreenVM.callingScreenModel.txtBlindPersonPh}"
            style="@style/txt_1" tools:text="@string/msg_blind_person_ph"/>
        <TextView android:ellipsize="end" android:id="@+id/txtCalling"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_52pxh"
            android:layout_marginStart="@dimen/_52pxh"
            android:layout_marginTop="@dimen/_88pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{callingScreenVM.callingScreenModel.txtCalling}"
            style="@style/txt_2" tools:text="@string/lbl_calling"/>
        <EditText
            android:background="@drawable/rectangle_bg_teal_600_radius_30"
            android:ellipsize="end" android:hint="@string/lbl_back"
            android:id="@+id/etBtnBack" android:inputType="text"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_137pxh"
            android:layout_marginStart="@dimen/_137pxh"
            android:layout_marginTop="@dimen/_136pxv"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_11pxh"
            android:paddingStart="@dimen/_24pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@={callingScreenVM.callingScreenModel.etBtnBackValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
    </LinearLayout>
</layout>
